# ttta

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: draft-pdf.yml  python-publish.yml
JOSS/: paper.bib  paper.md
docs/: requirements.txt
docs/source/: conf.py  evaluation.rst  index.rst  methods.rst  modules.rst  preprocessing.rst  ttta.evaluation.rst  ttta.methods.rst  ttta.rst  usage.rst
docs/source/diachronic_embeddings/: modules.rst  sense_embeddings.rst  similarity.rst
examples/: LDA_Prototype_and_RollingLDA.py  PRRR_example.ipynb  Semantic_shift_word2vec.ipynb
semantic_shift/: semantic_shift.py
semantic_shift/data/: data_loader.py  data_preprocessing.py
semantic_shift/embeddings/: bert.py  roberta.py  word2vec.py
semantic_shift/utils/: utils.py
src/ttta/: __init__.py  pipeline.py
src/ttta/diachronic_embeddings/: polynomial_fit.py  requirements.txt  sense_embeddings.py  utils.py
src/ttta/diachronic_embeddings/api/: api_call.py
src/ttta/diachronic_embeddings/data/: all_sentences.txt  embeddings_for_senses.json
src/ttta/diachronic_embeddings/data/target_words/: polysemous.txt  senses_oxford_api.json  target.txt
src/ttta/diachronic_embeddings/embeddings/: sense_embeddings.py  similarity.py
src/ttta/diachronic_embeddings/utils/: components.py  settings.py  utils.py
src/ttta/evaluation/: __init__.py
src/ttta/methods/: __init__.py  diachronic_embeddings.py  flda.py  lda_prototype.py  objectives.py  prr_time_dependent_weights.py  prr_time_independent_weights.py  reference_model.model  rolling_lda.py  sense_representation.py  structures.py  topic_matching.py  topical_changes.py  word2vec_semantic_shift.py
src/ttta/methods/LDA/: __init__.py  flda_c.pyx  flda_gibbs.h  importance_calculation.py  lda_gibbs.pyx  vanilla_gibbs.h
src/ttta/methods/diachronic_embeddings/: fine_tuning.py  polynomial_fit.py  sense_embeddings.py  similarity.py  utils.py
src/ttta/methods/roberta/: __init__.py  roberta.py
src/ttta/methods/utils/: utils.py
src/ttta/methods/word2vec/: word2vec.py  word2vec.yaml
src/ttta/preprocessing/: __init__.py  chunk_creation.py  dependency_check.py  pre.yaml  preprocess.py  schemas.py  semantic.py  settings.py
src/ttta/preprocessing/utils/: utils.py
tests/: test_chunk_creation.py  test_lda_prototype.py  test_rolling_lda.py  test_sense_representation.py  test_topic_matching.py  test_topical_changes.py  test_word2vec_semantic_shift.py
