[project]
name = "ttta"
version = "0.9.6"
description = "Tools for temporal text analysis: A Python package providing diachronic tools for text analysis."
readme = {file= "README.md", content-type = "text/markdown"}
authors = [
    {name = "Kai-Robin Lange", email = "kalange@statistik.tu-dortmund.de"},
    {name = "Lars Grönberg", email = "lars.groenberg@tu-dortmund.de"},
    {name = "Niklas Benner", email = "benner@statistik.tu-dortmund.de"},
    {name = "Imene Kolli", email = "imene.kolli@tu-dortmund.de"},
    {name = "Aymane Hachcham", email = "aymane.hachcham@tu-dortmund.de"},
    {name = "Jonas Rieger", email = "rieger@statistik.tu-dortmund.de"},
    {name = "Carsten Jentsch", email = "jentsch@statistik.tu-dortmund.de"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
keywords = ["python", "nlp", "diachronic embeddings", "dynamic topic modelling", "document scaling"]
dependencies = [
    "nltk",
    "Cython",
    "pandas",
    "gensim>=4.0.0",
    "matplotlib",
    "spacy",
    "joblib",
    "scipy",
    "numpy",
    "tqdm",
    "seaborn",
    "pyyaml",
    "xmltodict",
    "scikit-learn",
    "transformers>=4.46.3",
    "torch",
    "HanTa",
    "wasabi",
    "pyLDAvis>=3.4.0",
]

[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy"]

[tool.pyx-build.cythonize]
sources = [
    "src/ttta/methods/LDA/lda_gibbs.pyx"
]
include_dirs = [
    "{numpy.get_include()}"
]
