[project]
name = "ttta"
version = "0.9.9"
description = "Tools for temporal text analysis: A Python package providing diachronic tools for text analysis."
readme = {file= "README.md", content-type = "text/markdown"}
authors = [
    {name = "Kai-Robin Lange", email = "kalange@statistik.tu-dortmund.de"},
    {name = "Lars Grönberg", email = "lars.groenberg@tu-dortmund.de"},
    {name = "Niklas Benner", email = "niklas.benner@rwi-essen.de"},
    {name = "Imene Kolli", email = "imene.kolli@df.uzh.ch"},
    {name = "Aymane Hachcham", email = "aymane.hachcham@df.uzh.ch"},
    {name = "Jonas Rieger", email = "rieger@statistik.tu-dortmund.de"},
    {name = "Carsten Jentsch", email = "jentsch@statistik.tu-dortmund.de"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
keywords = ["python", "nlp", "diachronic embeddings", "dynamic topic modelling", "document scaling"]
dependencies = [
    "nltk",
    "Cython",
    "pandas",
    "scipy",
    "numpy",
    "tqdm",
    "scikit-learn",
    "HanTa",
    "pyLDAvis>=3.4.0",
    "matplotlib",
    "seaborn",
]

[project.optional-dependencies]
wordcloud = [
    "wordcloud",
]
embeddings = [
    "transformers>=4.46.3",
    "gensim>=4.0.0",
    "torch",
    "wasabi",
]
all = [
    "transformers>=4.46.3",
    "gensim>=4.0.0",
    "torch",
    "wasabi",
    "wordcloud",
]

[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy"]

[tool.pyx-build.cythonize]
sources = [
    "src/ttta/methods/LDA/lda_gibbs.pyx"
]
include_dirs = [
    "{numpy.get_include()}"
]
